[package]
name = "nyat64"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = [ "nom" ]

[dependencies]
anyhow = "1.0.42"
getopts = "0.2"
env_logger = "0.9"
log = "0.4.0"

afpacket = "0.1.5"
async-std = { version = "1.9", features = [ "attributes", "unstable" ] }
#futures = { version = "0.3", optional = true }
cached = "0.25"
pnet = "0.28"
nix = "0.22"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
nom = { version = "6", optional = true }
iptool = { version = "0.1", default-features = false, features = [ "pnet" ] }

tun = { path = "../tun" }